<resources>
    <string name="app_name">MedWiz</string>
    <string name="select_nuser_type">Select\nuser type</string>
    <string name="lab">Lab</string>
    <string name="doctor">Doctor</string>
    <string name="patient">Patient</string>
    <string name="new_account">New Account</string>
    <string name="login_with_your_account">Login with your account</string>
    <string name="imgback">Back</string>
    <string name="login">Login</string>
    <string name="imgprofile">imgprofile</string>
    <string name="phone">Phone</string>
    <string name="password_hint">********</string>
    <string name="login_now">Login now</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="as_a_doc">Login as a Doctor</string>
    <string name="as_a_patient">Login as a Patient</string>
    <string name="as_a_lab">Login as a Lab</string>
    <string name="create_new_account">Create new account</string>
    <string name="e_mail_adress">Email</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="address">Address</string>
    <string name="prostcode">Pincode</string>
    <string name="city_hint">City</string>
    <string name="mobile">Mobile number</string>
    <string name="next_step">Next step</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="about">About</string>
    <string name="history">History</string>
    <string name="logout">Logout</string>
    <string name="create_account">Create Account</string>
    <string name="choose_a_password">Choose Password</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="ok">OK</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="your_internet_connection_is_weak_please_check_your_network">Your Internet connection is weak. Please check your network.</string>
    <string name="change_account_type">Change Account Type</string>
    <string name="total_years_of_experience">Total Years Of Experience</string>
    <string name="upload_your_highest_qualification_certificate">Upload your highest Qualification Certificate</string>
    <string name="upload_license">Upload license</string>
    <string name="sample_text">An ophthalmologist is a physician who specializes in the diagnosis and treatment of diseases of the eye. Ophthalmologists may prescribe and fit eyeglasses and contact lenses and also treat eye diseases with drugs and surgery. An optometrist is not a physician.</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="phone_number">Phone Number</string>
    <string name="cont">Continue</string>
    <string name="verification">Verification</string>
    <string name="verification_title">Please enter the verification code sent to</string>
    <string name="demo_number">8010513971</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="verify">Verify</string>
    <string name="notification">Notification</string>
    <string name="booking">Booking</string>
    <string name="home">Home</string>
    <string name="near_by_doctors">Near by doctors</string>
    <string name="top_docs">Top doctors</string>
    <string name="about_me">About Me</string>
    <string name="long_text_ex">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</string>
    <string name="working_time">Working Time</string>
    <string name="review">Review</string>
    <string name="book_appoinment">Book An Appointment</string>
    <string name="awesome">Awesome</string>
    <string name="_4_8">4.8</string>
    <string name="select_date">Select Date</string>
    <string name="select_time">Select time</string>
    <string name="fees">Fees</string>
    <string name="rs_200">Rs.00</string>
    <string name="payment">Payment</string>
    <string name="payment_gateway">Payment gateway</string>
    <string name="pay">Pay</string>
    <string name="go_to_home">Go to homepage</string>
    <string name="completed">Completed</string>
    <string name="my_booking">My Bookings</string>
    <string name="upcoming">Upcoming</string>
    <string name="past">Past</string>
    <string name="no_image">No Image</string>
    <string name="canceled">Canceled</string>
    <string name="appointments">Appointments</string>
    <string name="add_prescription">Add Prescription</string>
    <string name="medicine">Medicines</string>
    <string name="test">Test</string>
    <string name="add_medicine">Add Medicine</string>
    <string name="medicine_name">Medicine Name</string>
    <string name="medicine_no_of_days">No of days</string>
    <string name="no_of_times">No of times</string>
    <string name="add_medicine_title">Add Medicines</string>
    <string name="add_test_title">Add Lab tests</string>
    <string name="lab_test_name">Test name</string>
    <string name="add">Add</string>
    <string name="prescription">Prescription</string>
    <string name="edit">Edit</string>
    <string name="test_required">Test Required</string>
    <string name="send_prescription">Send Prescription</string>
    <string name="preview">Preview</string>
    <string name="download_pdf">Download PDF</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_up">Sign up</string>
    <string name="signup_title">Please enter your detail to sign up and \ncreate an account</string>
    <string name="pin_code">Pincode/Locality</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="user_name">Username</string>
    <string name="paasword_length_error">Minimum password length should be 6 !</string>
    <string name="invalid_username">Username field cannot be left blank!</string>
    <string name="invalid_password">Password field cannot be left blank!</string>
    <string name="password_error">Please enter one capital latter, small letter and number for password!</string>
    <string name="something_went_wrong">Something went wrong !</string>
    <string name="INVALID_USER_CREDENTIALS">Invalid username or password</string>
    <string name="add_info">Add Info</string>
    <string name="add_info_title">Please add all information to complete the registration process</string>
    <string name="specialization">Specialization</string>
    <string name="years_of_experience">Years OF Experience</string>
    <string name="upload_file">Upload file</string>
    <string name="select_your_timings">Select your timings</string>
    <string name="tap_here_to_select">Tap here to select</string>
    <string name="select_timings">Select Timings</string>
    <string name="age">Age</string>
    <string name="lab_test">Lab Tests</string>
    <string name="order_now">Order now</string>
    <string name="add_lab_info">Add Lab/Pharmacy Info</string>
    <string name="lab_name">Lab Name</string>
    <string name="lab_address">Lab Address</string>
    <string name="Orders">Orders</string>
    <string name="order_time">Order Time</string>
    <string name="brand_name">Brand Name</string>
    <string name="mrp">MRP</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="add_lab_test">Add Lab tests</string>
    <string name="update_medicine">Update Medicine</string>
    <string name="search_by">Search by:</string>
    <string name="app_quotes">Your Health is an investment,\nnot an Expense</string>
    <string name="find_your_doctor">Find Your Doctor</string>
    <string name="hi_patient">Hi Patient</string>
    <string name="see_all">See all</string>
</resources>