<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/shopHomeFragment"
        android:icon="@drawable/ic_home"
        android:iconTint="@color/black"
        app:showAsAction="withText"
        android:title="@string/home"
        tools:targetApi="o" />

    <item
        android:id="@+id/shopHistoryFragment"
        android:icon="@drawable/ic_booking"
        android:iconTint="@color/black"
        app:showAsAction="withText"
        android:title="@string/history"
        tools:targetApi="o" />

    <item
        android:id="@+id/shopProfileFragments"
        android:icon="@drawable/ic_profile"
        android:iconTint="@color/black"
        android:title="@string/profile"
        app:showAsAction="withText"
        tools:targetApi="o" />
</menu>





