<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/h6_dp_12"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/imgBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_back"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/payment"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/poppins_medium"
        android:textColor="@color/black"
        android:layout_marginStart="@dimen/h6_dp_12"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintStart_toEndOf="@+id/imgBack"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvPaymentGateWay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/payment_gateway"
        android:padding="@dimen/h4_dp_16"
        android:gravity="center"
        android:background="@drawable/layout_rounded_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgComplete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:visibility="gone"
        android:src="@drawable/ic_complete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/liBookingComplete"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgComplete"
        app:layout_constraintVertical_bias="0.063"
        tools:layout_editor_absoluteX="12dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/completed"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvBookingCompleteDetails"
            android:gravity="center"
            android:text="@string/long_text_ex"
            />


    </LinearLayout>



    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btPay"
        android:text="@string/pay"
        android:textAllCaps="true"
        android:textSize="14sp"
        android:letterSpacing="0.1"
        android:textStyle="bold"
        android:lineSpacingExtra="16sp"
        android:gravity="center"
        android:textColor="@color/white"
        android:padding="12dp"
        android:background="@drawable/confirm_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/tvGotoHome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/go_to_home"
        android:textColor="@color/blue"
        android:padding="@dimen/h4_dp_16"
        android:gravity="center"
        android:visibility="gone"
        android:fontFamily="@font/poppins_bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>