<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".doctorsView.docotorUi.consult.AddPrescriptionsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/imgBackLinearLayout"
        android:orientation="horizontal"
        android:layout_marginStart="@dimen/h6_dp_12"
        android:layout_marginTop="@dimen/h6_dp_12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <ImageView
            android:id="@+id/imgBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back"
            android:gravity="center"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvTitle"
            android:layout_marginStart="@dimen/h6_dp_12"
            android:layout_gravity="center"
            android:fontFamily="@font/poppins_bold"
            android:textColor="@color/black"
            android:text="@string/add_prescription"/>
    </LinearLayout>

    <include
        layout="@layout/single_patient_rcv_item"
        android:id="@+id/includePatient"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgBackLinearLayout"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rlEdit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="@dimen/h6_dp_12"
        app:layout_constraintTop_toBottomOf="@+id/includePatient">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/prescription"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvEdit"
            android:layout_alignParentEnd="true"
            android:textColor="@color/blue"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/edit"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="@dimen/h6_dp_12"
        app:layout_constraintTop_toBottomOf="@+id/rlEdit">

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rcvMedicine"/>

        <TextView
            android:id="@+id/tvTest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/test_required"
            android:layout_marginTop="@dimen/h6_dp_12"/>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rcvTest"
            android:layout_marginTop="@dimen/h6_dp_12">

        </androidx.recyclerview.widget.RecyclerView>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/btSend"
        android:layout_marginStart="@dimen/h6_dp_12"
        android:layout_marginEnd="@dimen/h6_dp_12"
        android:text="@string/send_prescription"
        android:textColor="@color/white"
        android:gravity="center"
        android:textSize="@dimen/h5_sp_14"
        android:lineSpacingExtra="15sp"
        android:translationY="-7.5sp"
        android:background="@drawable/ic_rectangle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>



</androidx.constraintlayout.widget.ConstraintLayout>