<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:textColor="@color/blue"
        android:textSize="16sp"
        android:fontFamily="@font/como"
        android:padding="12dp"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/imgProfile"
        android:src="@drawable/ic_patient_blue"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="John Mathew"
        android:textStyle="bold"
        android:gravity="center"
        android:textAllCaps="true"
        android:textColor="@color/blue"
        android:textSize="16sp"
        android:fontFamily="@font/como"
        android:padding="12dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">
        <RelativeLayout
            android:id="@+id/rlProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <ImageView
                android:id="@+id/userImg"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_person" />

            <TextView
                android:id="@+id/pNametxt"
                android:text="@string/profile"
                android:textSize="20sp"
                android:layout_centerInParent="true"
                android:textColor="@color/blue"
                android:fontFamily="@font/como"
                android:textStyle="bold"
                android:maxLines="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/userImg"
                android:layout_marginStart="8dp" />


        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#f2f2f2" />

        <RelativeLayout
            android:id="@+id/rlAbout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <ImageView
                android:id="@+id/imgAbout"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_about" />

            <TextView
                android:text="@string/about"
                android:textSize="20sp"
                android:layout_centerInParent="true"
                android:textColor="@color/blue"
                android:fontFamily="@font/como"
                android:textStyle="bold"
                android:maxLines="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/imgAbout"
                android:layout_marginStart="8dp" />


        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#f2f2f2" />
        <RelativeLayout
            android:id="@+id/rlHistory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <ImageView
                android:id="@+id/imgHistory"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_history" />

            <TextView
                android:text="@string/history"
                android:textSize="20sp"
                android:layout_centerInParent="true"
                android:textColor="@color/blue"
                android:fontFamily="@font/como"
                android:textStyle="bold"
                android:maxLines="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/imgHistory"
                android:layout_marginStart="8dp" />


        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#f2f2f2" />

        <RelativeLayout
            android:id="@+id/rlLogout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <ImageView
                android:id="@+id/imgLogout"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_logout" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginStart="8dp"
                android:layout_toEndOf="@+id/imgLogout"
                android:fontFamily="@font/como"
                android:maxLines="1"
                android:text="@string/logout"
                android:textColor="@color/blue"
                android:textSize="20sp"
                android:textStyle="bold" />


        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#f2f2f2" />

    </LinearLayout>



</LinearLayout>